--- a/app/src/main/res/layout/favorite_rv.xml
+++ b/app/src/main/res/layout/favorite_rv.xml
@@ -72,17 +72,18 @@
             android:layout_width="wrap_content"
             android:layout_height="30dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/round_btutton"
+            android:background="#F99417"
             android:completionHint="select a day"
             android:completionThreshold="0"
             android:defaultFocusHighlightEnabled="true"
             android:editable="false"
             android:hint="@string/drop_hint"
-            android:paddingStart="12dp"
+            android:paddingStart="9dp"
             android:paddingTop="3dp"
+            android:paddingRight="9dp"
             android:paddingBottom="3dp"
             android:textAlignment="center"
-            android:textColorHint="@color/white"
+            android:textColorHint="#FFFFFF"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
