--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -15,13 +15,15 @@
         android:layout_marginTop="50dp"
         android:background="@drawable/login_et"
         android:hint="@string/email"
+        android:maxLength="30"
+        android:maxLines="1"
         android:minHeight="48dp"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
+
         android:textColor="@color/white"
         android:textColorHint="@color/white"
-
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
