--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -14,6 +14,7 @@
         android:layout_marginBottom="200dp"
         android:background="@drawable/login_et"
         android:hint="@string/name"
+        android:maxLength="30"
         android:minHeight="48dp"
         android:paddingLeft="15dp"
         android:paddingTop="10dp"
@@ -35,6 +36,7 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/login_et"
         android:hint="Email"
+        android:maxLength="30"
         android:minHeight="48dp"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
@@ -57,6 +59,7 @@
         android:background="@drawable/login_et"
         android:hint="@string/pass"
         android:inputType="textPassword"
+        android:maxLength="30"
         android:minHeight="48dp"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
@@ -79,6 +82,7 @@
         android:background="@drawable/login_et"
         android:hint="@string/confirm_pass"
         android:inputType="textPassword"
+        android:maxLength="30"
         android:minHeight="48dp"
         android:paddingLeft="20dp"
         android:paddingTop="10dp"
@@ -98,7 +102,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/login_signup_button"
-        android:backgroundTint="#f9c406"
+        android:backgroundTint="#F99417"
         android:text="@string/signup"
         android:textColor="@color/white"
         android:textSize="16sp"
