--- a/app/src/main/res/layout/view_pager_iteam.xml
+++ b/app/src/main/res/layout/view_pager_iteam.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#59FFFFFF">
+    android:layout_height="match_parent">
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottie_onboarding"
@@ -51,5 +50,43 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lottie_onboarding"
         app:layout_constraintVertical_bias="0.828" />
+
+    <Button
+        android:id="@+id/btn_onboadring1"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:background="@drawable/on_boarding_btn"
+        android:enabled="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.215"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
+        app:layout_constraintVertical_bias="0.289" />
+
+    <Button
+        android:id="@+id/btn_onboadring2"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:background="@drawable/on_boarding_btn"
+        android:enabled="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
+        app:layout_constraintVertical_bias="0.285" />
+
+    <Button
+        android:id="@+id/btn_onboadring3"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:background="@drawable/on_boarding_btn"
+        android:enabled="false"
+        app:layout_constraintBottom_toBottomOf="@+id/btn_onboadring2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintStart_toEndOf="@+id/btn_onboadring2"
+        app:layout_constraintTop_toTopOf="@+id/btn_onboadring2"
+        app:layout_constraintVertical_bias="0.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
