--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -67,9 +67,15 @@
 
             <Button
                 android:id="@+id/logout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Button" />
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="90dp"
+                android:layout_marginTop="18dp"
+                android:layout_marginEnd="16dp"
+                android:background="@drawable/logout1" />
+
         </RelativeLayout>
 
 
@@ -85,7 +91,6 @@
         android:src="@drawable/ic_edit_prof"
         android:background="#F99417"
         android:backgroundTint="#F99417"/>
-
 
 
 </RelativeLayout>
