--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         android:text="Hi,"
 
         android:textColor="@color/white"
-        android:textSize="40sp"
+        android:textSize="24sp"
         android:textStyle="bold
 "
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,10 +29,10 @@
     <TextView
         android:id="@+id/logged_user_name"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="5dp"
         android:textColor="@color/white"
-        android:textSize="40sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
