--- a/app/src/main/res/layout/flag_iteam.xml
+++ b/app/src/main/res/layout/flag_iteam.xml
@@ -26,7 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="TextView"
-                android:textColor="#A4FFFFFF"
+                android:textColor="#F99417"
                 android:textStyle="bold|italic"
                 app:layout_constraintBottom_toBottomOf="@+id/cardView2"
                 app:layout_constraintEnd_toEndOf="parent"
