--- a/app/src/main/res/layout/ingrediant_iteam.xml
+++ b/app/src/main/res/layout/ingrediant_iteam.xml
@@ -25,6 +25,7 @@
         android:layout_height="wrap_content"
         android:text="TextView"
         android:textColor="#A4FFFFFF"
+        android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_ingridiant_quantity"
         app:layout_constraintEnd_toStartOf="@+id/tv_ingridiant_quantity"
         app:layout_constraintStart_toStartOf="parent"
