--- a/app/src/main/res/values-ar-rEG/strings.ar.xml
+++ b/app/src/main/res/values-ar-rEG/strings.ar.xml
@@ -53,6 +53,14 @@
     <string name="lotte1">   لو انت عازب و بتدور علي طريقة تعمل بيها اكلة سهلة ؟؟</string>
     <string name="lotte2">  لو انت ست بيت و محتارة تطبخي ايه النهاردة ؟؟ </string>
     <string name="lotte3">اهل بيك  انت هنا في المكان الصح </string>
+    <string name="login_as_gest">welcome you are in right app </string>
+    <string name="delete">مسح</string>
+    <string name="cancel">الغاء</string>
+    <string name="delete_from_plan">Are you sure you want to delete this meal from your plan?
+ </string>
+
+    <string name="delete_from_favourit">Are you sure you want to delete this meal from your favorite list??
+ </string>
 
 
 
