--- a/app/src/main/res/layout/activity_ingrediant_search.xml
+++ b/app/src/main/res/layout/activity_ingrediant_search.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/Screen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#212121"
     tools:context=".Search.Ingrediant.View.IngrediantSearch">
 
     <com.airbnb.lottie.LottieAnimationView
@@ -36,11 +36,11 @@
 
     <TextView
         android:id="@+id/noInternet_tv_ingrediant"
+        style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="150dp"
         android:text="@string/no_internet"
-        android:textColor="@color/white"
         android:textSize="20sp"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
@@ -62,11 +62,11 @@
 
     <TextView
         android:id="@+id/oops_tv_ingrediant"
+        style="text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="200dp"
         android:text="@string/oops"
-        android:textColor="@color/white"
         android:textSize="18sp"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
@@ -76,12 +76,11 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
+        style="@style/Screen"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
         android:verticalScrollbarPosition="defaultPosition"
-        app:backgroundTint="@color/theme"
-        app:itemBackground="@color/theme"
         app:itemIconTint="@drawable/selector"
         app:itemTextColor="@drawable/selector"
         app:layout_constraintBottom_toBottomOf="parent"
