--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,23 +2,22 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/Card"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/theme"
-    android:backgroundTint="@color/theme"
     android:elevation="20dp"
     tools:context=".HomePage.View.MainActivity"
     tools:ignore="NamespaceTypo">
 
     <TextView
         android:id="@+id/textView"
+        style="@style/Text"
         android:layout_width="wrap_content"
+
         android:layout_height="wrap_content"
-
         android:layout_marginTop="5dp"
-        android:text="Hi,"
 
-        android:textColor="@color/white"
+        android:text="Hi,"
         android:textSize="24sp"
         android:textStyle="bold
 "
@@ -28,25 +27,25 @@
 
     <TextView
         android:id="@+id/logged_user_name"
+        style="@style/Text"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="5dp"
-        android:textColor="@color/white"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/textView" />
 
     <TextView
         android:id="@+id/textView2"
+        style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
 
+        android:layout_marginStart="40dp"
         android:text="Ready to plan your meals"
-        android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,6 +63,7 @@
         app:layout_constraintTop_toTopOf="@+id/wifi_img_main">
 
         <LinearLayout
+            style="@style/Screen"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -81,6 +81,7 @@
 
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/viewpager_home"
+                style="@style/Screen"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingStart="80dp"
@@ -100,8 +101,9 @@
 
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/viewpager_recommended"
+                style="@style/Text"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="200dp"
                 android:layout_marginTop="16dp"
                 android:paddingStart="90dp"
                 android:paddingEnd="90dp">
@@ -113,10 +115,10 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
+        style="@style/Screen"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        app:backgroundTint="@color/theme"
-        app:itemBackground="@color/theme"
+        app:itemActiveIndicatorStyle="@style/icon"
         app:itemIconTint="@drawable/selector"
         app:itemTextColor="@drawable/selector"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -127,8 +129,11 @@
 
     <ImageView
         android:id="@+id/wifi_img_main"
+        style="@style/Text"
         android:layout_width="200dp"
         android:layout_height="200dp"
+        android:background="@color/theme"
+        android:backgroundTint="@color/theme"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -139,9 +144,7 @@
         android:id="@+id/oops_tv_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="60dp"
         android:text="@string/oops"
-        android:textColor="@color/white"
         android:textSize="18sp"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
@@ -153,7 +156,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/no_internet"
-        android:textColor="@color/white"
         android:textSize="20sp"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/btn_rety_main"
