--- a/app/src/main/res/layout/activity_category_data.xml
+++ b/app/src/main/res/layout/activity_category_data.xml
@@ -2,10 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/Screen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:background="#212121"
     tools:context=".Category.View.CategoryData">
 
     <androidx.core.widget.NestedScrollView
@@ -41,12 +41,12 @@
 
             <TextView
                 android:id="@+id/tv_ing_disc"
+                style="@style/Text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center|center_vertical"
                 android:text="TextView"
-                android:textColor="#A4FFFFFF"
                 android:textSize="12sp" />
 
             <TextView
