--- a/app/src/main/res/layout/activity_country_data.xml
+++ b/app/src/main/res/layout/activity_country_data.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/tv_country_name"
+    style="@style/Screen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#212121"
     tools:context=".Search.FlagSearch.View.CountryData">
 
     <androidx.core.widget.NestedScrollView
