--- a/app/src/main/res/layout/activity_loved.xml
+++ b/app/src/main/res/layout/activity_loved.xml
@@ -2,30 +2,28 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/Screen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/theme"
-    android:backgroundTint="@color/theme"
     tools:context=".FavouriteMeals.View.FavouriteMealActivity">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
+        style="@style/Screen"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginTop="670dp"
-        app:backgroundTint="@color/theme"
-        app:itemBackground="@color/theme"
         app:itemIconTint="@drawable/selector"
         app:itemTextColor="@drawable/selector"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/fav_rv"
         app:menu="@menu/menu_navigation" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/fav_rv"
+        style="@style/Screen"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="40dp"
