--- a/app/src/main/res/layout/activity_meal_data.xml
+++ b/app/src/main/res/layout/activity_meal_data.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/Screen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#212121"
     tools:context=".Meal.View.MealData">
 
     <com.airbnb.lottie.LottieAnimationView
@@ -37,7 +37,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/no_internet"
-        android:textColor="@color/white"
         android:textSize="20sp"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/btn_add_to_fav"
@@ -47,6 +46,7 @@
 
     <ImageView
         android:id="@+id/wifi_img_meal_data"
+        style="@style/Image"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:visibility="visible"
@@ -58,10 +58,10 @@
 
     <TextView
         android:id="@+id/oops_tv_meal_data"
+        style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/oops"
-        android:textColor="@color/white"
         android:textSize="18sp"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/noInternet_tv_meal_data"
@@ -90,9 +90,9 @@
             android:orientation="vertical">
 
             <androidx.cardview.widget.CardView
+                style="@style/Card"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardBackgroundColor="#00FFFFFF"
                 app:cardCornerRadius="20dp">
 
                 <ImageView
@@ -139,8 +139,9 @@
                     android:layout_height="30dp"
                     android:layout_marginVertical="10dp"
                     android:layout_marginRight="10dp"
-                    android:layout_weight="0.25"
-                    android:background="@drawable/fav" />
+                    android:layout_weight="0.15"
+                    android:background="@drawable/fav"
+                    android:backgroundTint="#DA1414" />
             </LinearLayout>
 
             <TextView
@@ -164,11 +165,11 @@
 
             <TextView
                 android:id="@+id/tv_meal_category"
+                style="@style/Text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text=""
-                android:textColor="#A4FFFFFF"
                 android:textSize="12sp" />
 
             <TextView
@@ -182,11 +183,11 @@
 
             <TextView
                 android:id="@+id/tv_country"
+                style="@style/Text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text=""
-                android:textColor="#A4FFFFFF"
                 android:textSize="12sp"
                 android:textStyle="bold" />
 
@@ -201,11 +202,11 @@
 
             <TextView
                 android:id="@+id/tv_Instructions"
+                style="@style/Text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text=""
-                android:textColor="#A4FFFFFF"
                 android:textSize="12sp" />
 
             <TextView
@@ -219,11 +220,11 @@
 
             <TextView
                 android:id="@+id/tv_meal_tag"
+                style="@style/Text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text=""
-                android:textColor="#A4FFFFFF"
                 android:textSize="12sp"
                 android:textStyle="bold" />
 
