--- a/app/src/main/res/layout/favorite_rv.xml
+++ b/app/src/main/res/layout/favorite_rv.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cv_meal_plan_iteam"
+    style="@style/Card"
     android:layout_width="180dp"
     android:layout_height="250dp"
     android:layout_marginLeft="10dp"
     android:layout_marginTop="10dp"
     android:layout_marginRight="10dp"
     android:layout_marginBottom="10dp"
-    app:cardBackgroundColor="#272727"
     app:cardCornerRadius="30dp"
     app:cardElevation="20dp">
 
@@ -19,6 +19,7 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView3"
+            style="@style/Card"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:cardBackgroundColor="#272727"
@@ -37,7 +38,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="TextView"
-            android:textColor="#A4FFFFFF"
+            android:textColor="#ff9417"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -48,6 +49,7 @@
 
         <Button
             android:id="@+id/delete_btn_fav"
+            style="@style/icon"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:background="@drawable/delete"
