--- a/app/src/main/res/layout/ingrediant_iteam.xml
+++ b/app/src/main/res/layout/ingrediant_iteam.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="@style/Card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#00FFFFFF"
@@ -21,10 +22,10 @@
 
     <TextView
         android:id="@+id/tv_ingrediant_name"
+        style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        android:textColor="#A4FFFFFF"
         app:layout_constraintBottom_toBottomOf="@+id/tv_ingridiant_quantity"
         app:layout_constraintEnd_toStartOf="@+id/tv_ingridiant_quantity"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,10 +33,10 @@
 
     <TextView
         android:id="@+id/tv_ingridiant_quantity"
+        style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        android:textColor="#A4FFFFFF"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/iv_ingrediant"
         app:layout_constraintEnd_toStartOf="@+id/iv_ingrediant"
