--- a/app/src/main/res/layout/recommended_home_rv.xml
+++ b/app/src/main/res/layout/recommended_home_rv.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/slide_card"
+    style="@style/Card"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:cardBackgroundColor="#272727"
     app:cardCornerRadius="50dp"
     app:cardElevation="20dp"
     app:cardPreventCornerOverlap="true">
@@ -36,18 +36,18 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_favourit"
-            app:layout_constraintHorizontal_bias="0.559"
+            app:layout_constraintHorizontal_bias="0.565"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cardView5"
-            app:layout_constraintVertical_bias="0.734"
+            app:layout_constraintVertical_bias="0.73"
             tools:ignore="Deprecated" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView5"
+            style="@style/Card"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            app:cardBackgroundColor="#272727"
             app:cardCornerRadius="70dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -67,11 +67,13 @@
             android:layout_height="30dp"
             android:layout_weight="1"
             android:background="@drawable/fav"
+            android:backgroundTint="#DA1414"
             app:layout_constraintBottom_toBottomOf="@+id/recomended_dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.927"
+            app:layout_constraintHorizontal_bias="0.884"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/recomended_dp" />
+            app:layout_constraintTop_toTopOf="@+id/recomended_dp"
+            app:layout_constraintVertical_bias="1.0" />
 
         <TextView
             android:id="@+id/rec_meal_name"
