--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -8,7 +8,8 @@
     <item
         android:id="@+id/search"
         android:title="search"
-        android:icon="@drawable/search"/>
+        android:icon="@drawable/search"
+        />
 
     <item
         android:id="@+id/love"
