--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,5 +13,22 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">#000000</item>
         <!-- Customize your theme here. -->
+
     </style>
+    <style name="Screen">
+        <item name="android:background">#e0e0e0</item>
+    </style>
+    <style name="Card">
+        <item name="android:background">#ebebeb</item>
+    </style>
+    <style name="Text">
+        <item name="android:textColor">#000</item>
+    </style>
+    <style name="Image">
+        <item name="android:background">#000</item>
+    </style>
+    <style name="icon">
+        <item name="android:backgroundTint">#000</item>
+    </style>
+
 </resources>
